[package]
name = "ljm"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An idiomatic Rust wrapper for the LabJack LJM library."
homepage = "https://github.com/harrisonmg/ljm"
repository = "https://github.com/harrisonmg/ljm"
readme = "README.md"

[workspace]

[dependencies]
ljm-sys = { version = "0.1.1", path = "ljm-sys" }

[dev-dependencies]
anyhow = "1.0.75"
uuid = { version = "1.7.0", features = ["v4"] }
